// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`useStyles attaches new styles when a new style collector is supplied 1`] = `
<head>
  <style
    data-trousers=".foo__3889083325 .foo--491189580"
    type="text/css"
  >
    .foo__3889083325{background-color:blue;}

    .foo--491189580{background-color:red;}

  </style>
</head>
`;

exports[`useStyles attaches new styles when a new style collector is supplied 2`] = `
<head>
  <style
    data-trousers=".foo__3889083325 .foo--491189580 .foo__3016956831 .foo--3826246206"
    type="text/css"
  >
    .foo__3889083325{background-color:blue;}

    .foo--491189580{background-color:red;}

    .foo__3016956831{background-color:purple;}

    .foo--3826246206{background-color:green;}

  </style>
</head>
`;

exports[`useStyles attaches single style to the head 1`] = `
<head>
  <style
    data-trousers=".css__293439549"
    type="text/css"
  >
    .css__293439549{background-color:blue;}

  </style>
</head>
`;

exports[`useStyles attaches styles to the head 1`] = `
<head>
  <style
    data-trousers=".foo__3889083325"
    type="text/css"
  >
    .foo__3889083325{background-color:blue;}

  </style>
</head>
`;

exports[`useStyles attaches styles with modifiers to the head 1`] = `
<head>
  <style
    data-trousers=".foo__3889083325"
    type="text/css"
  >
    .foo__3889083325{background-color:blue;}

  </style>
</head>
`;

exports[`useStyles attaches styles with modifiers to the head 2`] = `
<head>
  <style
    data-trousers=".foo__3889083325 .foo--491189580"
    type="text/css"
  >
    .foo__3889083325{background-color:blue;}

    .foo--491189580{background-color:red;}

  </style>
</head>
`;

exports[`useStyles attaches styles with multiple named modifiers to the head 1`] = `
<head>
  <style
    data-trousers=".foo__3889083325"
    type="text/css"
  >
    .foo__3889083325{background-color:blue;}

  </style>
</head>
`;

exports[`useStyles attaches styles with multiple named modifiers to the head 2`] = `
<head>
  <style
    data-trousers=".foo__3889083325 .foo--primary491189580"
    type="text/css"
  >
    .foo__3889083325{background-color:blue;}

    .foo--primary491189580{background-color:red;}

  </style>
</head>
`;

exports[`useStyles attaches styles with multiple named modifiers to the head 3`] = `
<head>
  <style
    data-trousers=".foo__3889083325 .foo--primary491189580 .foo--secondary112991879"
    type="text/css"
  >
    .foo__3889083325{background-color:blue;}

    .foo--primary491189580{background-color:red;}

    .foo--secondary112991879{background-color:isBlue;}

  </style>
</head>
`;

exports[`useStyles attaches styles with multiple named modifiers to the head 4`] = `
<head>
  <style
    data-trousers=".foo__3889083325 .foo--primary491189580 .foo--secondary112991879"
    type="text/css"
  >
    .foo__3889083325{background-color:blue;}

    .foo--primary491189580{background-color:red;}

    .foo--secondary112991879{background-color:isBlue;}

  </style>
</head>
`;

exports[`useStyles attaches styles with named modifiers to the head 1`] = `
<head>
  <style
    data-trousers=".foo__3889083325"
    type="text/css"
  >
    .foo__3889083325{background-color:blue;}

  </style>
</head>
`;

exports[`useStyles attaches styles with named modifiers to the head 2`] = `
<head>
  <style
    data-trousers=".foo__3889083325 .foo--primary491189580"
    type="text/css"
  >
    .foo__3889083325{background-color:blue;}

    .foo--primary491189580{background-color:red;}

  </style>
</head>
`;

exports[`useStyles attaches themed single style to the head 1`] = `
<head>
  <style
    data-trousers=".css__42468333793516409327"
    type="text/css"
  >
    .css__42468333793516409327{background-color:Atomic Tangerine;}

  </style>
</head>
`;

exports[`useStyles attaches themed styles to the head 1`] = `
<head>
  <style
    data-trousers=".foo__38783974113106931827"
    type="text/css"
  >
    .foo__38783974113106931827{background-color:purple;}

  </style>
</head>
`;

exports[`useStyles attaches themed styles to the head 2`] = `
<head>
  <style
    data-trousers=".foo__38783974113106931827 .foo--38783974113106931827"
    type="text/css"
  >
    .foo__38783974113106931827{background-color:purple;}

    .foo--38783974113106931827{background-color:purple;}

  </style>
</head>
`;
